--- a/css/styles.css
+++ b/css/styles.css
@@ -259,16 +259,27 @@ img {
 
 /* Hero section */
 .hero {
+  max-width: 1600px;
+  height: 600px;
+  background-color: #c4c4c4;
+  background: rgba(47, 48, 58, 0.4);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-image: url(../images/hero/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 200px;
+  padding-bottom: 200px;
   text-align: center;
-  background-color: var(--dark-bg-cl);
 }
 
 .main-title {
   margin: 0 auto;
   margin-bottom: 30px;
   width: 696px;
-  /* padding-top: 200px;
-  padding-bottom: 280px; */
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
@@ -313,7 +324,8 @@ img {
   margin-bottom: 47px;
 }
 .work-title,
-.team-title {
+.team-title,
+.clients-title {
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
@@ -321,6 +333,7 @@ img {
   letter-spacing: 0.03em;
   color: var(--main-txt-cl);
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .work-list {
@@ -335,9 +348,9 @@ img {
   background: #f5f4fa;
 }
 
-.team-title {
+/* .team-title {
   margin-bottom: 50px;
-}
+} */
 
 .team-list {
   display: flex;
@@ -379,6 +392,7 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
+  margin-bottom: 16px;
 }
 
 /* Project section */
@@ -388,6 +402,11 @@ img {
   gap: 8px;
   margin-bottom: 50px;
   justify-content: center;
+}
+
+.btn-filter:hover,
+.btn-filter:focus {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .project-list {
@@ -411,7 +430,16 @@ img {
   padding-left: 24px;
 
   border: 1px solid #eeeeee;
-  border-top: none;
+}
+
+.project-link {
+  display: block;
+}
+
+.project-link:hover,
+.project-wrapper:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-subtitle {
@@ -464,4 +492,148 @@ img {
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  margin-right: 70px;
+}
+
+/* Socials icon */
+
+.socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.socials-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  color: #afb1b8;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+
+.socials-link:hover,
+.socials-link:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.socials-icon {
+  fill: currentColor;
+}
+
+/* .socials-link:hover,
+.socials-link:focus {
+  background-color: #2196f3;
+}
+
+.socials-link:hover .socials-icon {
+  fill: #ffffff;
+} */
+
+.features-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  padding: 25px 100px;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+}
+
+.header-icon {
+  fill: currentColor;
+}
+
+.header-mail,
+.header-phone {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.clients-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  color: #afb1b8;
+}
+
+.clients-item:hover,
+.clients-item:focus {
+  color: #2196f3;
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+
+.clients-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  padding: 16px 32px;
+  width: 170px;
+  height: 92px;
+  fill: currentColor;
+}
+/* Footer section */
+
+/* .footer-address {
+  display: flex;
+} */
+
+.footer-socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin: 0;
+}
+
+.footer-title {
+  margin-bottom: 20px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
+
+.footer-socials-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .footer-socials-link:not(:last-child) {
+  margin-right: 10px;
+} */
+
+.footer-socials-link {
+  display: flex;
+  margin-right: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+  background-color: #2196f3;
 }
