додане допрацювання секції з клієнтами, дз4

--- a/css/styles.css
+++ b/css/styles.css
@@ -561,14 +561,10 @@ img {
   align-items: center;
   justify-content: center;
   gap: 30px;
-  color: #afb1b8;
 }
 
-.clients-item:hover,
-.clients-item:focus {
-  color: #2196f3;
-  border: 1px solid #2196f3;
-  border-radius: 4px;
+.clients-link {
+  color: #afb1b8;
 }
 
 .clients-icon {
@@ -580,8 +576,16 @@ img {
   border-radius: 4px;
   width: 170px;
   height: 92px;
+  padding: 16px 32px;
   fill: currentColor;
 }
+
+.clients-icon:hover,
+.clients-icon:focus {
+  color: #2196f3;
+  border: 1px solid #2196f3;
+}
+
 /* Footer section */
 
 .footer-content {
